refactor: make chapter 1 better

--- a/ddd/1.md
+++ b/ddd/1.md
@@ -358,7 +358,11 @@ Amazon S3 supports the processing, storage, and transmission of credit card data
 
 ### Введение
 
-В данной практической работе произведен анализ предметной области "объектное S3 хранилище" на основе предоставленных описаний сервисов Yandex Object Storage и Amazon S3. Целью работы является формирование и документирование списка функциональных и нефункциональных требований к подобной системе. Определение четких требований является фундаментальным этапом в процессе проектирования и разработки любого программного обеспечения, так как они закладывают основу для будущей архитектуры, функциональности и критериев качества.
+В данной практической работе произведен анализ предметной области "объектное S3 хранилище". Целью работы является формирование и документирование исчерпывающего списка функциональных и нефункциональных требований к подобной информационной системе. В качестве основы для анализа были использованы описания ведущих облачных сервисов: Yandex Object Storage и Amazon Simple Storage Service (S3), которые де-факто являются стандартами в этой области.
+
+Определение четких, измеримых и полных требований является фундаментальным и критически важным этапом в жизненном цикле разработки любого программного обеспечения. Этот процесс позволяет не только сформировать общее видение продукта для всех участников проекта — от заказчиков до разработчиков и тестировщиков, — но и заложить основу для будущей архитектуры, определить критерии качества и успешности проекта. Качественно проработанный список требований минимизирует риски, связанные с неправильным пониманием задач, сокращает количество дорогостоящих переделок на поздних этапах и служит базисом для планирования и оценки работ.
+
+В рамках данной работы будет произведена декомпозиция сложной сущности "объектное хранилище" на конкретные функциональные возможности, которые система должна предоставлять пользователю, и нефункциональные, описывающие, *как* система должна выполнять эти функции. Каждому требованию будут сопоставлены атрибуты качества, позволяющие в дальнейшем объективно оценить степень его реализации.
 
 ### Ход работы
 
@@ -366,114 +370,44 @@ Amazon S3 supports the processing, storage, and transmission of credit card data
 
 #### Функциональные требования
 
-1. **Хранение объектов:** Система должна позволять пользователям загружать, хранить и скачивать файлы (объекты) любого формата.
-    - **Атрибуты качества:**
-        - **Полнота:** Поддерживаются все форматы файлов.
-        - **Корректность:** Загруженный и скачанный объекты должны быть идентичны.
+В таблице ниже приведены функциональные требования, которые описывают, *что* система должна делать. Они определяют основные возможности, доступные пользователю для взаимодействия с данными в хранилище.
 
-2. **Организация в бакеты:** Система должна предоставлять возможность создавать именованные контейнеры (бакеты) для группировки и хранения объектов.
-    - **Атрибуты качества:**
-        - **Удобство использования:** Простой интерфейс (API) для создания и управления бакетами.
-        - **Надежность:** Имя бакета должно быть уникальным в рамках системы.
-
-3. **Адресация объектов:** Каждый объект в бакете должен иметь уникальный ключ (имя), который используется для доступа к нему.
-    - **Атрибуты качества:**
-        - **Точность:** Ключ должен однозначно идентифицировать объект внутри бакета.
-
-4. **Управление метаданными:** Система должна позволять пользователям прикреплять, изменять и получать пользовательские метаданные (пары ключ-значение) для каждого объекта.
-    - **Атрибуты качества:**
-        - **Гибкость:** Возможность хранить произвольную информацию, связанную с объектом.
-        - **Атомарность:** Изменения метаданных должны применяться вместе с операциями над объектом.
-
-5. **Управление доступом:** Система должна предоставлять механизмы для гибкой настройки прав доступа к бакетам и объектам (например, через IAM, ACL, политики бакетов).
-    - **Атрибуты качества:**
-        - **Безопасность:** По умолчанию все объекты должны быть приватными.
-        - **Гибкость:** Возможность гранулярной настройки прав на чтение, запись, удаление.
-
-6. **Версионирование объектов:** Система должна поддерживать опциональное версионирование объектов в бакетах для защиты от случайного удаления или перезаписи.
-    - **Атрибуты качества:**
-        - **Надежность:** Система должна сохранять все версии объекта до их явного удаления.
-        - **Восстанавливаемость:** Возможность восстановить любую предыдущую версию объекта.
-
-7. **Управление жизненным циклом:** Система должна позволять настраивать правила для автоматического перемещения объектов между классами хранения или их удаления по истечении заданного срока.
-    - **Атрибуты качества:**
-        - **Эффективность:** Автоматизация рутинных операций.
-        - **Оптимизация затрат:** Снижение стоимости хранения за счет перемещения редко используемых данных.
-
-8. **Блокировка объектов (Object Lock):** Система должна предоставлять WORM-модель (Write-Once-Read-Many) для предотвращения удаления или перезаписи объектов в течение заданного периода.
-    - **Атрибуты качества:**
-        - **Соответствие требованиям:** Помогает выполнять требования регуляторов по хранению данных.
-        - **Целостность:** Гарантирует неизменность данных.
-
-9. **Репликация данных:** Система должна поддерживать автоматическую асинхронную репликацию объектов в другие бакеты (в том числе в других географических регионах).
-    - **Атрибуты качества:**
-        - **Надежность:** Повышение отказоустойчивости.
-        - **Производительность:** Снижение задержек для географически распределенных пользователей.
-
-10. **Пакетные операции (Batch Operations):** Система должна предоставлять возможность выполнять одну операцию (копирование, восстановление, вызов Lambda) над большим списком объектов одним запросом.
-    - **Атрибуты качества:**
-        - **Эффективность:** Упрощение и ускорение управления большим количеством объектов.
-        - **Масштабируемость:** Способность обрабатывать миллиарды объектов.
-
-11. **Уведомления о событиях:** Система должна генерировать уведомления (например, в очереди сообщений или через вызов Lambda-функции) при наступлении событий в бакете (создание, удаление объекта).
-    - **Атрибуты качества:**
-        - **Интегрируемость:** Легкая интеграция с другими сервисами для построения event-driven архитектуры.
-        - **Надежность:** Гарантированная доставка уведомлений.
-
-12. **Хостинг статических сайтов:** Система должна предоставлять возможность настроить бакет для раздачи статического контента (HTML, CSS, JS) как веб-сайт.
-    - **Атрибуты качества:**
-        - **Доступность:** Сайт должен быть доступен по стандартному протоколу HTTP(S).
+| Название                        | Требование                                                                                                                     | Атрибуты качества                                                                                                                                                            |
+| :------------------------------ | :----------------------------------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **Хранение объектов**           | Система должна позволять пользователям загружать, хранить и скачивать файлы (объекты) любого формата.                          | **Полнота:** Поддерживаются все форматы файлов.  **Корректность:** Загруженный и скачанный объекты должны быть идентичны.                                                    |
+| **Организация в бакеты**        | Система должна предоставлять возможность создавать именованные контейнеры (бакеты) для группировки и хранения объектов.        | **Удобство использования:** Простой интерфейс (API) для создания и управления бакетами.  **Надежность:** Имя бакета должно быть уникальным в рамках системы.                 |
+| **Адресация объектов**          | Каждый объект в бакете должен иметь уникальный ключ (имя), который используется для доступа к нему.                            | **Точность:** Ключ должен однозначно идентифицировать объект внутри бакета.                                                                                                  |
+| **Управление метаданными**      | Система должна позволять пользователям прикреплять, изменять и получать пользовательские метаданные для каждого объекта.       | **Гибкость:** Возможность хранить произвольную информацию, связанную с объектом.  **Атомарность:** Изменения метаданных должны применяться вместе с операциями над объектом. |
+| **Управление доступом**         | Система должна предоставлять механизмы для гибкой настройки прав доступа к бакетам и объектам.                                 | **Безопасность:** По умолчанию все объекты должны быть приватными.  **Гибкость:** Возможность гранулярной настройки прав на чтение, запись, удаление.                        |
+| **Версионирование объектов**    | Система должна поддерживать опциональное версионирование объектов для защиты от случайного удаления или перезаписи.            | **Надежность:** Система должна сохранять все версии объекта до их явного удаления.  **Восстанавливаемость:** Возможность восстановить любую предыдущую версию объекта.       |
+| **Управление жизненным циклом** | Система должна позволять настраивать правила для автоматического перемещения объектов между классами хранения или их удаления. | **Эффективность:** Автоматизация рутинных операций.  **Оптимизация затрат:** Снижение стоимости хранения за счет перемещения данных.                                         |
+| **Блокировка объектов**         | Система должна предоставлять WORM-модель для предотвращения удаления или перезаписи объектов.                                  | **Соответствие требованиям:** Помогает выполнять требования регуляторов.  **Целостность:** Гарантирует неизменность данных.                                                  |
+| **Репликация данных**           | Система должна поддерживать автоматическую репликацию объектов в другие бакеты/регионы.                                        | **Надежность:** Повышение отказоустойчивости.  **Производительность:** Снижение задержек для географически распределенных пользователей.                                     |
+| **Пакетные операции**           | Система должна предоставлять возможность выполнять одну операцию над большим списком объектов одним запросом.                  | **Эффективность:** Упрощение и ускорение управления большим количеством объектов.  **Масштабируемость:** Способность обрабатывать миллиарды объектов.                        |
+| **Уведомления о событиях**      | Система должна генерировать уведомления при наступлении событий в бакете (создание, удаление объекта).                         | **Интегрируемость:** Легкая интеграция с другими сервисами.  **Надежность:** Гарантированная доставка уведомлений.                                                           |
+| **Хостинг статических сайтов**  | Система должна предоставлять возможность настроить бакет для раздачи статического контента.                                    | **Доступность:** Сайт должен быть доступен по стандартному протоколу HTTP(S).                                                                                                |
 
 #### Нефункциональные требования
 
-1. **Масштабируемость:** Система должна быть способна хранить неограниченный объем данных и количество объектов, справляясь с ростом нагрузки.
-    - **Атрибуты качества (Метрики):**
-        - **Горизонтальная масштабируемость:** Добавление новых узлов хранения должно линейно увеличивать общую емкость и производительность.
+Нефункциональные требования определяют, *как* система должна выполнять свои функции. Они задают общие атрибуты качества, такие как производительность, надежность и безопасность, которые являются критически важными для облачного хранилища.
 
-2. **Доступность:** Система должна обеспечивать высокий уровень доступности данных, минимизируя время простоя.
-    - **Атрибуты качества (Метрики):**
-        - **Uptime:** SLA не менее 99.9% времени.
-        - **Отказоустойчивость:** Выход из строя одного или нескольких компонентов не должен приводить к потере данных или полной недоступности сервиса.
-
-3. **Производительность:** Система должна обеспечивать низкую задержку при доступе к данным (чтение/запись).
-    - **Атрибуты качества (Метрики):**
-        - **Latency:** Среднее время ответа на запрос GET для "горячих" данных не должно превышать 10-20 мс.
-        - **Throughput:** Способность обрабатывать сотни тысяч запросов в секунду.
-
-4. **Надежность и сохранность данных:** Система должна гарантировать сохранность данных с очень высокой вероятностью.
-    - **Атрибуты качества (Метрики):**
-        - **Data Durability:** 99.999% (пять девяток). Достигается за счет избыточности (репликации) данных.
-
-5. **Безопасность:** Система должна защищать данные от несанкционированного доступа на всех уровнях.
-    - **Атрибуты качества (Метрики):**
-        - **Шифрование:** Поддержка шифрования данных при передаче (SSL/TLS) и в состоянии покоя (server-side encryption).
-        - **Контроль доступа:** Интеграция с IAM, поддержка политик доступа.
-        - **Изоляция:** Данные разных клиентов должны быть строго изолированы друг от друга.
-
-6. **Консистентность данных:** Система должна обеспечивать строгую консистентность после записи (strong read-after-write consistency) для операций с объектами.
-    - **Атрибуты качества (Метрики):**
-        - **Корректность:** Сразу после успешного запроса на создание/обновление/удаление объекта, любой последующий запрос на чтение должен возвращать актуальное состояние.
-
-7. **Управляемость и Мониторинг:** Система должна предоставлять исчерпывающие инструменты для управления, мониторинга, логирования и анализа использования ресурсов.
-    - **Атрибуты качества (Метрики):**
-        - **Наблюдаемость:** Наличие метрик использования, логов доступа, отчетов по составу бакетов.
-        - **Простота управления:** Наличие UI-консоли, CLI и SDK для управления ресурсами.
-
-8. **Экономическая эффективность:** Система должна предлагать различные классы хранения и инструменты для оптимизации затрат на хранение данных.
-    - **Атрибуты качества (Метрики):**
-        - **Гибкость ценообразования:** Модель "оплата по мере использования" (pay-as-you-go), наличие разных тарифов для данных с разной частотой доступа.
-
-9. **Совместимость:** Система должна быть совместима с широко распространенными протоколами и инструментами.
-    - **Атрибуты качества (Метрики):**
-        - **S3 API Compatibility:** Высокая степень совместимости с Amazon S3 REST API.
-
-10. **Аудируемость:** Все действия пользователей и системы с данными и настройками должны логироваться для последующего анализа безопасности и аудита.
-    - **Атрибуты качества (Метрики):**
-        - **Полнота логов:** Логирование всех мутирующих API-вызовов.
-        - **Доступность логов:** Возможность экспорта и анализа логов.
+| Название                            | Требование                                                                                                            | Атрибуты качества (Метрики)                                                                                                                                                            |
+| :---------------------------------- | :-------------------------------------------------------------------------------------------------------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **Масштабируемость**                | Система должна быть способна хранить неограниченный объем данных и количество объектов, справляясь с ростом нагрузки. | **Горизонтальная масштабируемость:** Добавление новых узлов хранения должно линейно увеличивать общую емкость и производительность.                                                    |
+| **Доступность**                     | Система должна обеспечивать высокий уровень доступности данных, минимизируя время простоя.                            | **Uptime:** SLA не менее 99.9% времени.  **Отказоустойчивость:** Выход из строя компонента не должен приводить к потере данных.                                                        |
+| **Производительность**              | Система должна обеспечивать низкую задержку при доступе к данным (чтение/запись).                                     | **Latency:** Среднее время ответа на запрос GET для "горячих" данных < 20 мс.  **Throughput:** Способность обрабатывать 100,000+ запросов в секунду.                                   |
+| **Надежность и сохранность данных** | Система должна гарантировать сохранность данных с очень высокой вероятностью.                                         | **Data Durability:** 99.999% (пять девяток). Достигается за счет избыточности (репликации) данных.                                                                                     |
+| **Безопасность**                    | Система должна защищать данные от несанкционированного доступа на всех уровнях.                                       | **Шифрование:** Поддержка SSL/TLS и server-side encryption.  **Контроль доступа:** Интеграция с IAM, поддержка политик.  **Изоляция:** Данные клиентов должны быть строго изолированы. |
+| **Консистентность данных**          | Система должна обеспечивать строгую консистентность после записи (strong read-after-write consistency).               | **Корректность:** Сразу после успешной операции любой последующий запрос на чтение должен возвращать актуальное состояние.                                                             |
+| **Управляемость и Мониторинг**      | Система должна предоставлять инструменты для управления, мониторинга, логирования и анализа использования.            | **Наблюдаемость:** Наличие метрик, логов, отчетов.  **Простота управления:** Наличие UI-консоли, CLI и SDK.                                                                            |
+| **Экономическая эффективность**     | Система должна предлагать различные классы хранения для оптимизации затрат.                                           | **Гибкость ценообразования:** Модель "оплата по мере использования", наличие разных тарифов.                                                                                           |
+| **Совместимость**                   | Система должна быть совместима с широко распространенными протоколами и инструментами.                                | **S3 API Compatibility:** Высокая степень совместимости с Amazon S3 REST API.                                                                                                          |
+| **Аудируемость**                    | Все мутирующие действия с данными и настройками должны логироваться для анализа безопасности и аудита.                | **Полнота логов:** Логирование всех мутирующих API-вызовов.  **Доступность логов:** Возможность экспорта и анализа логов.                                                              |
 
 ### Вывод
 
-В ходе выполнения практической работы был проведен анализ предметной области S3-совместимых объектных хранилищ. На основе этого анализа был сформирован перечень ключевых функциональных и нефункциональных требований к системе. Разделение требований на две эти группы позволяет четко разграничить, *что* система должна делать (функциональные) и *как* она должна это делать (нефункциональные).
+В ходе выполнения данной практической работы был проведен детальный анализ предметной области S3-совместимых объектных хранилищ, что позволило сформулировать комплексный набор требований к проектируемой системе. Изучение существующих решений, таких как Amazon S3, показало, что современные облачные хранилища — это сложные, многоаспектные системы, успех которых зависит от баланса между богатой функциональностью и строгими нефункциональными характеристиками.
 
-Сформулированные требования с их атрибутами качества создают прочную основу для дальнейшего проектирования, разработки и тестирования системы, обеспечивая общее понимание целей и критериев успеха проекта для всех его участников.
+Разработка списка из функциональных и нефункциональных требований позволила глубоко погрузиться в архитектурные и пользовательские аспекты таких систем. Было выявлено, что ключевыми для пользователя являются не только базовые CRUD операции(создание, чтение, обновление, удаление) над данными, но и продвинутые возможности, такие как управление жизненным циклом, версионирование, репликация и гранулярное управление доступом. С другой стороны, нефункциональные требования, такие как высокая доступность, сохранность данных, масштабируемость и безопасность, являются фундаментом, на котором строится доверие пользователей и жизнеспособность сервиса в целом.
+
+Таким образом, проделанная работа позволила сформировать твердое, документированное основание для последующего этапа разработки: от архитектурного проектирования до реализации и тестирования. Сформулированные требования и их атрибуты качества служат четким руководством и критерием для оценки конечного продукта, обеспечивая соответствие системы ожиданиям пользователей и требованиям современной IT-инфраструктуры.
