feat: some ПАЦО

--- a/ПАЦО/4.md
+++ b/ПАЦО/4.md
@@ -1,113 +1,34 @@
-# Практическая работа 3
+# Практическая работа 4
 
 ## Задание
 
-Задание 3. Бизнес-модель Остервальдера – Business Model Canvas (BMC). Блоки
-«Потребительские сегменты» и «Ценностные предложения».
-На основании представленного описания и полученных сведений в Задании 1 и Задании
-2 заполните в текстовом виде 2 блока бизнес-модели Остервальдера.
-В этом пункте и далее по Заданию описание блоков бизнес-модели Остервальдера
-приводится с ориентацией на всю деятельность/направления деятельности выбранного
-объекта исследования. Описание соответствующих блоков приводится сначала в
-текстовом виде по пунктам Задания. После описания ВСЕХ блоков результат
-отображается в виде диаграммы бизнес-модели Остервальдера — Business Model Canvas
-(BMC). Для построения диаграммы рекомендуется использовать ПО Archi.
-Блок: ПОТРЕБИТЕЛЬСКИЕ СЕГМЕНТЫ (Customer Segments)
-Цель этого шага: определить приоритетные потребительские сегменты (или
-внутренних заказчиков), непосредственно связанные с исследуемым процессом, который
-подлежит цифровой трансформации.
-Концепция: КТО наш клиент и в каком контексте он взаимодействует с нами?
-Что это такое: это группы (сегменты) клиентов и организаций, для которых компания
-создаёт ценность и кому она продаёт свои продукты или услуги.
-Если предмет исследования относится к группе обеспечивающих бизнес-процессов, то
-расширьте блок «Потребительские сегменты» внутренними заказчиками — отделами,
-сотрудниками, руководителями и т.д., которые используют результат внутреннего процесса.
-Как заполнять:
-
-1. Определите всех клиентов, кому нужны услуги/продукты рассматриваемой
-организации/компании (или внутренних заказчиков, если рассматривается вспомогательный
-процесс).
-2. Разделите клиентов на сегменты (группы) по ключевым признакам:
-− тип: физическое лицо, бизнес, госструктура……
-− размер клиента: малый, средний, крупный бизнес….
-− география: Москва, Московская область, регионы…..
-− потребность/ситуация: постоянное подключение, временные проекты,
-аварийные работы
-3. Определите потребность/ситуацию для каждого выделенного сегмента.
-− для внешних клиентов — что они хотят получить и в каком контексте (покупка,
-использование, сервис);
-− для внутренних заказчиков — какой результат процесса им нужен, в какой
-форме и в какие сроки.
-4. Выберите приоритетные сегменты. Приоритетными в контексте текущего
-задания считаются сегменты клиентов, которые:
-− непосредственно взаимодействуют с исследуемым бизнес-процессом,
-выбранным для цифровой трансформации;
-− для которых качество, скорость и удобство выполнения исследуемого процесса
-являются критически важными для удовлетворённости и лояльности.
-Пример представления результата для блока «Потребительские сегменты» (объект
-исследования — пиццерия):
-• Семьи с детьми — заказывают пиццу вечером для ужина или на праздники.
-Для них важны удобство заказа, быстрая доставка, возможность выбрать детское меню
-и наличие акций для больших заказов.
-• Студенты и молодёжь — частые ночные заказы, компании друзей.
-Это активные и мобильные люди, часто делающие заказы на ночь или в компании
-друзей. Для них ценны доступные цены, большие порции, скидки при групповых заказах и
-круглосуточная доставка.
-Приоритетность сегмента
-Для процесса «Формирование и применение акций и спецпредложений для заказов»
-приоритетным сегментом являются семьи с детьми, поскольку они часто оформляют заказы
-на ужин или праздники, заказывают несколько позиций, включая детское меню, и активно
-реагируют на предложения, позволяющие сэкономить при больших заказах.
-Качество и удобство работы этого процесса напрямую влияет на их лояльность:
-простота выбора акции при заказе, корректное автоматическое применение скидки и
-информирование о выгодных предложениях повышают вероятность повторных покупок.
-Блок ЦЕННОСТНЫЕ ПРЕДЛОЖЕНИЯ (Value Propositions)
-Цель этого шага: зафиксировать предварительные гипотезы ценностных
-предложений для приоритетных сегментов, связанных с исследуемым процессом.
-Концепция: ЧТО мы даём клиенту, чтобы он выбрал нас?
-Что это такое: это то, что делает продукт/услугу уникальным и привлекательным для
-клиентов. Оно объясняет, как продукт или услуга решает проблему или удовлетворяет
-потребности целевого сегмента.
-Как заполнять:
-1. Определите для предприятия в целом, какие ценностные предложения оно
-предоставляет своим потребительским сегментам, то есть за счёт чего организация создаёт для
-них ценность.
-2. Кратко сформулируйте предполагаемое решение (без деталей).
-3. Запишите предварительную гипотезу ценностного предложения в одной фразе в
-формате: «Организация/компания предлагает [решение], которое [главная ценность]».
-4. Соотнесите сформулированные краткие гипотезы с ранее определенными
-приоритетными сегментами, зафиксировав основную проблему или потребность, связанную с
-исследуемым процессом.
-Пример представления краткого результата в контексте приоритетных сегментов
-для блока «Ценностные предложения»» (объект исследования — пиццерия):
-Сегмент «Семьи с детьми»: Быстрая доставка ужина для всей семьи с возможностью
-выбора детского меню.
-Сегмент «Студенты и молодёжь»: Круглосуточная доставка большой пиццы по
-доступной цене.
-Задание 4. Карта эмпатии.
-Разработайте карту эмпатии для каждого выбранного приоритетного сегмента, уточняя
-их мотивы, ожидания, боли и выгоды. Учесть, что по методологии Остервальдера карта
-эмпатии формально создаётся для потребительского сегмента, но при заполнении она
-описывает типичного представителя данного сегмента (персону/клиента).
+Задание 5. Диаграмма «Ромашка».
+Постройте диаграмму «Ромашка» для визуализации жизненных ситуаций при
+взаимодействии приоритетного сегмента с исследуемым процессом и выявления
+соответствующих потребностей, которые должны быть удовлетворены в каждой из этих
+ситуаций.
 Результат представьте в графическом виде, для построения рекомендуется
-использовать любой доступный графический инструмент, например, <https://online.visualparadigm.com>.
-Концепция: КАК клиент думает, чувствует и принимает решение о выборе.
-Как заполнять (рекомендуемая последовательность):
-1. Что думает и чувствует персона/клиент (Think & Feel) — ключевые заботы,
-устремления, страхи.
-Вопрос: Что для клиента важно? О чём он переживает? Чего боится? К чему стремится?
-2. Что видит (See) — окружение, конкуренты, визуальные стимулы.
-Вопрос: Что клиент наблюдает в своём окружении? Какие примеры, конкуренты или
-тренды он замечает?
-3. Что слышит (Hear) — мнение друзей, коллег, СМИ.
-Вопрос: Что клиент слышит от друзей, коллег, СМИ, блогеров? Какие мнения влияют
-на него?
-4. Что говорит и делает (Say & Do) — слова, действия, поведение.
-Вопрос: Что клиент говорит другим? Какие действия предпринимает? Как ведёт себя?
-5. Боли (Pains) — барьеры, раздражители, риски.
-Вопрос: Что мешает клиенту? Какие проблемы он хочет избежать?
-6. Выгоды (Gains) — желаемые результаты, выгоды, успехи.
-Вопрос: Что для клиента будет ценным результатом? Что он ожидает получить?
+использовать любой доступный графический инструмент, например, диаграмму «Солнечные
+лучи» в MSExcel.
+Диаграмма «Ромашка» — это инструмент, который помогает визуализировать, в каких
+жизненных ситуациях клиент сталкивается с услугой или процессом, и какие потребности он
+при этом испытывает.
+Порядок построения:
+
+1. Опишите ключевые жизненные ситуации/реальные жизненные обстоятельства,
+в которых клиент обращается к процессу или услуге. Жизненные ситуации приводятся для
+каждого приоритетного сегмента, который был определен и описан в карте эмпатии.
+Формулируйте кратко и конкретно (например, для сегмента «Семьи с детьми» могут быть
+жизненные ситуации «День рождения ребёнка», «Семейный ужин в выходной»).
+2. Определите потребности для каждой выделенной жизненной ситуации. Для
+каждой ситуации укажите, что именно нужно клиенту, чтобы взаимодействие прошло
+успешно. Потребности описывайте с позиции клиента, избегая внутренних терминов
+организации (например, для сегмента «Семьи с детьми» потребностью в ситуации «Семейный
+ужин в выходной» могут быть потребности «получить заказ вовремя», «быстро оформить
+заказ»).
+3. Постройте диаграмму «Ромашка». В центре — сегмент потребителей. На
+лепестках — жизненные ситуации. От каждого лепестка — список потребностей, связанных с
+этой ситуацией.
 
 ## Требования
 
@@ -117,6 +38,7 @@
 - Официальный стиль;
 - Кратко и по делу.
 - Где уместно, вставляй место для рисунка
+– Стараться избегать списков. Вместо них предпочтительнее использовать связные текст.
 
 ## Контекст
 
@@ -454,34 +376,37 @@ Security Management yc-security-01 Ubuntu 22.04, Docker VM Управле-ние
 
 ### Ход работы
 
-В ходе выполнения практической работы были заполнены блоки «Потребительские сегменты» и «Ценностные предложения» бизнес-модели Остервальдера, а также разработаны карты эмпатии для приоритетных сегментов.
+В рамках выполнения практической работы была построена диаграмма «Ромашка» для визуализации ключевых жизненных ситуаций и потребностей приоритетного потребительского сегмента — «Крупные корпоративные клиенты». Этот сегмент был выбран как приоритетный в предыдущей работе, поскольку его представители (например, ИТ-директора крупных компаний) активно взаимодействуют с процессом предоставления облачных услуг и имеют высокие требования к качеству, безопасности и надежности сервисов.
 
-#### 3. Бизнес-модель Остервальдера
+Анализ взаимодействия данного сегмента с облачной платформой позволил выделить несколько ключевых жизненных ситуаций. Одной из наиболее значимых является **миграция существующей ИТ-инфраструктуры в облако**. В этом контексте клиенту требуется не только технологическое решение, но и комплексная экспертная поддержка для обеспечения плавного перехода с минимальным временем простоя. Ключевыми потребностями здесь выступают гарантии безопасности передаваемых данных и получение прозрачной, прогнозируемой модели затрат на облачные ресурсы.
 
-**Блок: Потребительские сегменты (Customer Segments)**
+Другая типичная ситуация — **разработка и запуск нового цифрового продукта**. Для корпоративных клиентов, стремящихся к инновациям, критически важна скорость вывода решений на рынок. Их потребности включают быстрый доступ к вычислительным ресурсам, использование готовых платформенных сервисов (PaaS) для ускорения разработки и наличие инструментов для автоматизации развертывания (CI/CD), что позволяет сократить time-to-market.
 
-На основе анализа деятельности Яндекс.Облако были выделены четыре ключевых потребительских сегмента. Первый сегмент — это **крупные корпоративные клиенты**, представляющие ведущие компании из различных отраслей экономики, таких как финансы, ритейл и промышленность. Эти организации нуждаются в надежной, масштабируемой и безопасной ИТ-инфраструктуре для проведения цифровой трансформации. Для них критически важны высокий уровень доступности сервисов (SLA), соответствие строгим стандартам безопасности (ФЗ-152, ФЗ-187) и возможность использования передовых технологий, включая Big Data и AI/ML.
+Также корпоративные клиенты часто сталкиваются с необходимостью **масштабирования ресурсов под пиковые нагрузки**, например, в периоды сезонных распродаж или маркетинговых кампаний. В этой ситуации основной потребностью является возможность автоматического увеличения и уменьшения мощности, чтобы обеспечить стабильную работу сервисов и платить только за фактически использованные ресурсы, избегая переплат за простой.
 
-Второй значимый сегмент — **государственные заказчики**. Сюда входят федеральные и региональные органы власти, а также государственные корпорации, деятельность которых ориентирована на импортозамещение и обеспечение технологического суверенитета страны. Их ключевыми потребностями являются строгое соответствие законодательству РФ, наличие аттестованной по требованиям безопасности инфраструктуры и гарантии надежного хранения данных.
+Важнейшей жизненной ситуацией является **обеспечение соответствия требованиям регуляторов**, особенно для компаний из финансового и государственного секторов. Их главная потребность — размещение данных в сертифицированных дата-центрах на территории РФ и использование сервисов, аттестованных в соответствии с ФЗ-152 и другими нормативными актами, что гарантирует юридическую защищенность бизнеса.
 
-Третий сегмент составляет **средний и малый бизнес (СМБ)**. Эти компании ищут экономичные и гибкие облачные решения, способствующие развитию их бизнеса. Они ценят простоту использования платформы, наличие готовых платформенных сервисов (PaaS) и возможность быстрого масштабирования без значительных капитальных вложений.
+Наконец, все более актуальной становится ситуация **внедрения технологий анализа больших данных и ИИ**. Здесь клиенты нуждаются в доступе к мощным и масштабируемым инструментам для обработки данных и готовым ML-сервисам, которые позволяют быстро создавать прототипы и внедрять интеллектуальные решения без необходимости содержать штат дорогостоящих специалистов.
 
-Наконец, четвертый сегмент — это **ИТ-компании и разработчики**. Он включает в себя технологические стартапы и команды разработчиков, которым необходимы современные инструменты для полного цикла создания, тестирования и развертывания приложений в рамках методологии DevSecOps.
+На основе этих данных была сформирована диаграмма «Ромашка», наглядно представляющая связь между жизненными ситуациями и потребностями клиента.
 
-**Приоритетность сегмента**
+#### Данные для диаграммы «Ромашка»
 
-Для процесса «Предоставление услуг по хранению данных, вычислениям и разработке приложений» приоритетными сегментами являются **крупные корпоративные клиенты** и **государственные заказчики**. Это обусловлено их значительным вкладом в выручку, стратегической важностью для государства (импортозамещение, технологический суверенитет) и повышенными требованиями к надежности и безопасности, что стимулирует развитие всей платформы Яндекс.Облако.
+Для построения диаграммы «Солнечные лучи» (Sunburst) в MS Excel можно использовать следующие иерархические данные.
 
-**Блок: Ценностные предложения (Value Propositions)**
+| Уровень 1 | Уровень 2 | Уровень 3 | Значение | Цвет |
+| :--- | :--- | :--- | :--- | :--- |
+| Крупные корпоративные клиенты | Миграция ИТ-инфраструктуры | Экспертная поддержка | 1 | #FFC000 |
+| Крупные корпоративные клиенты | Миграция ИТ-инфраструктуры | Безопасность данных | 1 | #FFC000 |
+| Крупные корпоративные клиенты | Миграция ИТ-инфраструктуры | Прозрачность затрат | 1 | #FFC000 |
+| Крупные корпоративные клиенты | Запуск нового продукта | Быстрый доступ к ресурсам | 1 | #00B0F0 |
+| Крупные корпоративные клиенты | Запуск нового продукта | Готовые PaaS-сервисы | 1 | #00B0F0 |
+| Крупные корпоративные клиенты | Запуск нового продукта | Автоматизация CI/CD | 1 | #00B0F0 |
+| Крупные корпоративные клиенты | Масштабирование под нагрузки | Автоматическое масштабирование | 1 | #92D050 |
+| Крупные корпоративные клиенты | Масштабирование под нагрузки | Оплата по факту использования | 1 | #92D050 |
+| Крупные корпоративные клиенты | Соответствие регуляторам | Сертифицированные ЦОД в РФ | 1 | #7030A0 |
+| Крупные корпоративные клиенты | Соответствие регуляторам | Аттестация по ФЗ-152 | 1 | #7030A0 |
+| Крупные корпоративные клиенты | Внедрение Big Data и ИИ | Мощные инструменты обработки | 1 | #FF5733 |
+| Крупные корпоративные клиенты | Внедрение Big Data и ИИ | Готовые ML-сервисы | 1 | #FF5733 |
 
-Для каждого из выделенных сегментов Яндекс.Облако формирует уникальные ценностные предложения. **Крупным корпоративным клиентам** предлагается комплексная и безопасная облачная платформа, обеспечивающая надежную ИТ-инфраструктуру для цифровой трансформации и ускорения роста бизнеса за счет доступа к передовым технологиям. **Государственным заказчикам** компания предоставляет отечественную облачную платформу, которая гарантирует технологический суверенитет, соответствие требованиям российского законодательства в области безопасности данных и аттестованную инфраструктуру для размещения государственных информационных систем.
-
-Для **среднего и малого бизнеса** Яндекс.Облако разрабатывает гибкие и экономичные облачные решения, позволяющие быстро запускать и масштабировать цифровые проекты без необходимости капитальных затрат на ИТ-инфраструктуру. В свою очередь, **ИТ-компаниям и разработчикам** предлагается многофункциональная платформа с современными инструментами, такими как PaaS, ML/AI и DevSecOps, которая значительно ускоряет цикл разработки и вывода на рынок инновационных приложений.
-
-#### 4. Карта эмпатии
-
-**Карта эмпатии для сегмента «Крупные корпоративные клиенты»**
-
-*Рисунок (место для диаграммы)*
-
-Типичным представителем данного сегмента является руководитель ИТ-департамента крупного банка. Он постоянно **думает и чувствует** обеспокоенность за безопасность клиентских данных и стабильность работы сервисов. Он стремится сократить издержки на ИТ, но в то же время боится рисков, связанных с миграцией в облако, и активно ищет способы ускорить запуск новых продуктов, чтобы не отставать от конкурентов. В своем окружении он **видит**, как конкуренты активно внедряют цифровые решения, а государство усиливает регулирование в сфере информационной безопасности и импортозамещения. Из отраслевых СМИ он узнает об успешных кейсах перехода в облако. От своего руководства он **слышит** требования повышать эффективность и снижать затраты, от коллег — позитивные отзывы о снижении CAPEX после миграции, а от специалистов по ИБ — предупреждения о потенциальных рисках. В своих действиях он **говорит и делает** следующее: запрашивает коммерческие предложения у нескольких провайдеров, инициирует пилотные проекты и требует от поставщиков гарантии по SLA и сертификаты соответствия требованиям регуляторов. Его основные **боли** — это высокие капитальные затраты на собственную инфраструктуру, длительные циклы закупки оборудования, нехватка квалифицированных кадров, а также риски простоя и несоответствия законодательству. В то же время, он ожидает получить **выгоды** в виде снижения совокупной стоимости владения ИТ, повышения гибкости и скорости вывода продуктов на рынок, доступа к современным технологиям (AI/ML), а также гарантированной масштабируемости и высокого уровня безопасности.
+*Рисунок (место для диаграммы «Ромашка»)*
